History of this buildout
========================

4.18 (unreleased)
-----------------

- Use fresh collective.emaillogin 1.3.  No real changes, it has simply
  moved to github.
  [maurits]


4.17 (2012-11-06)
-----------------

- Plone security hot fix.
  [maurits and apparently wimb too]


4.16 (2012-08-17)
-----------------

- Read HTTP_PROXY from the environment when running the buildout and
  add it to the generated zope.conf.  This avoids the problem the this
  environment variable does not exist when zope is started at reboot
  time by cron, which would cause errors checking the captcha on the
  registration form.
  [maurits]


4.15 (2012-06-13)
-----------------

- Added patch so recaptcha uses proxies. [vincent]


4.14 (2012-05-07)
-----------------

- Add a link with the text 'Archive' to the digibib overview.
  [maurits]

- Switch 'folder' and 'plus' icons around in the digibib overview.
  [maurits]

- Changed label of folder icon in Digibib overview to 'Archive'.
  [maurits]


4.13 (2012-04-24)
-----------------

- Fixed order of items displaying in 'jaarverslag' view.
  [vincent]


4.12 (2012-04-16)
-----------------

- Get rid of ugly underscore after the mail document action.
  [maurits]


4.11 (2012-03-22)
-----------------

- Added upgrade step to get the new action.
  [maurits]

- Fixed typo in Dutch translation.
  [maurits]


4.10 (2012-03-21)
-----------------

- Added action on meeting to manually regenerate the full
  PDF. [vincent] 

- Updated listeners for the 'conacatenate_pdf' event. [vincent]


4.9 (2012-02-22)
----------------

- Added DataGridField 'otherInvitees' to meeting.
  [maurits]

- Add Products.DataGridField.
  [maurits]


4.8 (2012-02-14)
----------------

- Do not update the invitees for meetings in the 'past' state.
  [maurits]

- When saving a meeting that is still in the initial (new) state,
  reset the list of invitees before rebuilding it.  This way we can
  correct mistakes for new meetings.
  [maurits]
