@@ -4,6 +4,8 @@ History of this buildout
 4.18 (unreleased)
 -----------------
 
+- fixed caching for the meeting's location. [vincent]
+
 - Use fresh collective.emaillogin 1.3.  No real changes, it has simply
   moved to github.
   [maurits]
